# ChangeLog for app-shells/bash-completion
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*bash-completion-20081219-r2 (23 Mar 2009)

  23 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
  +files/20081219/01_escaped_completion.patch, +files/bash-completion,
  +files/bash-completion.sh, +bash-completion-20081219-r2.ebuild:
  patch for >=bash-4.0 that fixes completion with escaped characters
