@@ -1,6 +1,6 @@
-AUX 20081219/01_escaped_completion.patch 388 RMD160 5ca210e5888f64888566ab18a011df023f734e24 SHA1 2572f03378a6fd2a402f0374ca1d04d1f9dd9f9b SHA256 0ed48281c3c9091ce280f18e952a19fdd581e91af4c50c84fb80d9d6f0f9b554
+AUX 20081219/01_escaped_completion.patch 972 RMD160 6b61eda15210e7d96a471cc7b958a37206b8bbd1 SHA1 99d83f5f56a9a54eb5884d0473a658cf7f12f18f SHA256 206cdfd4c2f5d0ccde34a8060a1937d4d919ac207da637b63d5d4f88d55256db
 AUX bash-completion 724 RMD160 dc15f6b02f08a2fa656fa2d0c9ed15d20a7b9dc8 SHA1 d71224475d73b134085bf5f70fb1eb311397cae2 SHA256 6898275f2b0ab67af4b35c8a239d04a233e0c252acb5ed76692fd65881d3be0e
 AUX bash-completion.sh 1683 RMD160 f5d723122d1a0431af0a19838330e30f6f7e324f SHA1 1d7136206699886bc98d3b2dccfbdb3eff524ceb SHA256 3f742e1296597241b5d01565bc3220db9b1340dcb3d7bca3f0b107b2122791d7
 DIST bash-completion-20081219.tar.bz2 91246 RMD160 4fd868363f3ee7277c8ad8769a37fe7c6de76efd SHA1 c13987837c46feefd6d7832c181d2c6f15878ead SHA256 c3869a95654ba6c976ee156d7553d066d597225d764dbf63706041583cfe5a7f
 EBUILD bash-completion-20081219-r2.ebuild 3563 RMD160 01491c5f86f826c68c0a45c26c60c0d1e9191740 SHA1 5b539b54bc88580ef32b4a0ba951f9aa8334b7ad SHA256 16a0cfd525032162f2ec0d4a4bfa267c8d1d8ff14a9a70e5d5961f9fb80ffdf7
-MISC ChangeLog 443 RMD160 9d33ba5315eae416533c90b38887614c72f975f6 SHA1 37bd8adfbbca824633009d3ea483ed67dd12fc8a SHA256 17df5720be3e6b2593e56c68e431c33197f7963e49e0e6ce716b7245ee1cd18a
+MISC ChangeLog 585 RMD160 7b0c22cb2745ad9881cd7476b0558b44a3e3b4c8 SHA1 4fc6763db3a90aa8ad8164b4605df28f451086ef SHA256 16966730207fb9d473ef9bc3ebbb64e9937f18638f66739ffe7e31d615482359
