@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
+  files/20081219/01_escaped_completion.patch:
+  updated patch [bgo #262246]
+
 *bash-completion-20081219-r2 (23 Mar 2009)
 
   23 Mar 2009; Alex Alexander (wired) <alex.alexander@gmail.com>
